Fixed z-index order on mobile devices

--- a/web/css/grafterizer.css
+++ b/web/css/grafterizer.css
@@ -15,9 +15,12 @@ iframe.grafterizer {
 }
 
 @media (max-width: 750px) {
+    body > header {
+      z-index:2;
+    }
     .grafterizer-container {
         top: 155px;
-        z-index:-1;
+        /*z-index:-1;*/
     }
 }
 
